# DriveLinkDesktop

./: .clang-format  .gitignore  CMakeLists.txt  DriveLinkDesktop.slnx  LICENSE  README.md  app.rc.in  installer.nsi  vcpkg.json
DriveLinkDesktop/: DriveLinkDesktop.cpp  DriveLinkDesktop.vcxproj  DriveLinkDesktop.vcxproj.filters  InputState.hpp  Protocols.hpp  Resource.rc  Server.cpp  Server.hpp
DriveLinkDesktop/assets/shaders/: Gradient.frag
DriveLinkDesktop/include/: DriveLink.hpp
DriveLinkDesktop/include/dl/app/: DriveLink.hpp
DriveLinkDesktop/include/dl/core/: Constants.hpp  Server.hpp
DriveLinkDesktop/include/dl/input/: GamepadFeeder.hpp
DriveLinkDesktop/include/dl/platform/: VirtualGamepad.hpp
DriveLinkDesktop/include/dl/platform/windows/: vJoyGamepad.hpp
DriveLinkDesktop/include/dl/resources/: ResourceManager.hpp
DriveLinkDesktop/include/dl/ui/: button.hpp  buttonIndicator.hpp  component.hpp  progress.hpp  text.hpp
DriveLinkDesktop/include/dl/utility/: Logger.hpp  Utils.hpp
DriveLinkDesktop/include/network/: Server.hpp
DriveLinkDesktop/include/platform/: platform.hpp
DriveLinkDesktop/include/ui/: button.hpp  component.hpp  cross.hpp  text.hpp
DriveLinkDesktop/include/utility/: Utils.hpp
DriveLinkDesktop/src/: DriveLink.cpp  main.cpp
DriveLinkDesktop/src/app/: DriveLink.cpp
DriveLinkDesktop/src/core/: Server.cpp
DriveLinkDesktop/src/input/: GamepadFeeder.cpp
DriveLinkDesktop/src/network/: Server.cpp
DriveLinkDesktop/src/platform/: platform.cpp
DriveLinkDesktop/src/platform/windows/: PlatformUtils.cpp  vJoyGamepad.cpp
DriveLinkDesktop/src/resources/: ResourceManager.cpp
DriveLinkDesktop/src/ui/: button.cpp  buttonIndicator.cpp  cross.cpp  progress.cpp  text.cpp
DriveLinkDesktop/src/utility/: Logger.cpp
docs/: INTERNAL_SUMMARY.md
include/dl/app/: DriveLink.hpp
include/dl/core/: Constants.hpp  InputState.hpp  Server.hpp
include/dl/input/: GamepadFeeder.hpp
include/dl/platform/: PlatformUtils.hpp  VirtualGamepad.hpp
include/dl/platform/linux/: linuxGamepad.hpp
include/dl/platform/windows/: vJoyGamepad.hpp
include/dl/ui/: button.hpp  buttonIndicator.hpp  component.hpp  cross.hpp  text.hpp
include/dl/utility/: Logger.hpp
installer/: installer.nsi  linuxInstaller.sh.in  winInstaller.nsi
src/: main.cpp
src/dl/app/: DriveLink.cpp
src/dl/core/: Server.cpp
src/dl/input/: GamepadFeeder.cpp
src/dl/platform/linux/: PlatformUtils.cpp  linuxGamepad.cpp
src/dl/platform/windows/: PlatformUtils.cpp  vJoyGamepad.cpp
src/dl/resources/: ResourceManager.cpp
src/dl/ui/: button.cpp  buttonIndicator.cpp  cross.cpp  progress.cpp  text.cpp
src/dl/utility/: Logger.cpp
